# adsp.xconvolver

./: .cproject  .gitignore  .project  CMakeLists.txt
adsp.XConvolver/: addon.xml
adsp.XConvolver/resources/: settings.xml
adsp.XConvolver/resources/language/English/: strings.po
adsp.XConvolver/resources/language/German/: strings.po
adsp.XConvolver/resources/skins/Confluence/720p/: DialogOutputResampleProcess.xml  DialogPreProcess.xml  DialogXConvolverSettings.xml
adsp.XConvolver/resources/skins/Confluence/720p/old/: DialogSpeakerDistance.xml  DialogSpeakerGain.xml
depends/common/asplib/: CMakeLists.txt  asplib.txt
depends/common/kodiutilities/: kodiutilities.txt
src/: ADDONOptional.cpp  ADDONOptional.h  DSPProcessor.cpp  DSPProcessor.h  XConvolverProcessor.cpp  XConvolverProcessor.h  channelUpmixer.cpp  channelUpmixer.h  filterManager.cpp  filterManager.h
src/Dialogs/: GUIDialogMasterProcess.cpp  GUIDialogMasterProcess.h  GUIDialogOutputResample.cpp  GUIDialogOutputResample.h  GUIDialogPostProcess.cpp  GUIDialogPostProcess.h  GUIDialogPreProcess.cpp  GUIDialogPreProcess.h  GUIDialogXConvolverSettings.cpp  GUIDialogXConvolverSettings.h
src/RoomCorrection/: FloatSignal.cpp  FloatSignal.h  IRGrabber.cpp  IRGrabber.h  ITSignalGenerator.h  SignalPlayer.cpp  SignalPlayer.h  SignalRecorder.cpp  SignalRecorder.h  WaveSignal.cpp  WaveSignal.h  typedefs.h
src/RoomCorrection/CaptureDevice/: CaptureDeviceFactory.cpp  CaptureDeviceFactory.h  CaptureSourceFactory.h
src/RoomCorrection/CaptureDevice/Interfaces/: ICaptureDevice.h  ICaptureSource.h
src/RoomCorrection/CaptureDevice/Source/: PortAudioSource.cpp  PortAudioSource.h
src/RoomCorrection/SignalGenerator/: FloatSignal.cpp  FloatSignal.h  WaveSignal.cpp  WaveSignal.h
src/RoomCorrection/SignalGenerator/Interfaces/: ITSignalGenerator.h
src/template/: ADSPAddonHandler.cpp  ADSPAddonMain.cpp  ADSPProcessorHandle.cpp  AudioDSPSettings.cpp  GUIDialogBase.cpp  IADDONOptional.cpp  IADSPProcessor.cpp  client.cpp
src/template/AddonExceptions/: IAddonException.h  TAddonException.h
src/template/Messages/: ADSPModeMessage.cpp
src/template/Settings/: ISettingsElement.h  SettingsManager.h
src/template/configuration/: templateConfiguration.cpp  templateConfiguration.h
src/template/include/: ADSPAddonHandler.h  ADSPAddonMain.h  ADSPProcessorHandle.h  GUIDialogBase.h  IADDONOptional.h  IADSPProcessor.h  MACROHelper.h  client.h  typedefs.h
src/utils/: TSamplesBuffer.h
